# hexa-matter

./: .gitignore  2D-MATERIALS.md  ADHESIVE.md  ADHESIVE.tape  AGENTS.md  AGENTS.tape  ARAMID.tape  ATTESTATION.md  AXIS.md  AXIS.tape  AXIS_CLOSURE_PLAN.md  AXIS_CLOSURE_PLAN.tape  BIODEGRADABLE-PLASTICS.md  BIODEGRADABLE-PLASTICS.tape  CERAMIC-ENGINEERING.md  CERAMIC-ENGINEERING.tape  CERAMICS.tape  CITATION.cff  CLOSURE_RESIDUAL_BACKLOG.md  CLOSURE_RESIDUAL_BACKLOG.tape  CLOSURE_STATUS.md  CLOSURE_STATUS.tape  COMPOUND-SEMI.md  COMPOUND-SEMI.tape  CONCRETE-TECHNOLOGY.tape  CONCRETE.tape  CRITICAL-MINERAL.log.tape  CRITICAL-MINERAL.md  CRITICAL-MINERAL.tape  CROSS_LINK.md  CROSS_LINK.tape  DECOMPOSITION_PLAN.md  DECOMPOSITION_PLAN.tape  ELASTOMER.md  ELASTOMER.tape  EPOXY.tape  FASHION-TEXTILE.tape  GEMOLOGY.tape  GOAL.md  GRAPHENE-CARBON.md  (+68 more)
2d-materials/: 2d-materials.md
_absorption_bridge/: README.md  aflow_adapter.md  catalysis_hub_adapter.md  cod_adapter.md  nims_mats_adapter.md  nomad_adapter.md  oqmd_adapter.md  pyproject.toml
_absorption_bridge/aflow/: SOURCES.md  aflow_search_smoke.py
_absorption_bridge/aflow/cache/: sample_record.json
_absorption_bridge/catalysis_hub/: SOURCES.md  catalysis_hub_search_smoke.py
_absorption_bridge/catalysis_hub/cache/: sample_record.json
_absorption_bridge/cod/: SOURCES.md  cod_search_smoke.py
_absorption_bridge/cod/cache/: sample_record.json
_absorption_bridge/gnome/: SOURCES.md  gnome_dataset_smoke.py
_absorption_bridge/gnome/cache/: sample_record.json
_absorption_bridge/materials_project/: SOURCES.md  mp_api_smoke.py
_absorption_bridge/materials_project/cache/: sample_response.json
_absorption_bridge/matlantis/: SOURCES.md  matlantis_call_smoke.py
_absorption_bridge/matlantis/cache/: sample_response.json
_absorption_bridge/nims_mats/: SOURCES.md  nims_mats_search_smoke.py
_absorption_bridge/nims_mats/cache/: sample_record.json
_absorption_bridge/nomad/: SOURCES.md  nomad_search_smoke.py
_absorption_bridge/nomad/cache/: sample_record.json
_absorption_bridge/omat24/: SOURCES.md  omat24_dataset_smoke.py
_absorption_bridge/omat24/cache/: sample_record.json
_absorption_bridge/oqmd/: SOURCES.md  oqmd_search_smoke.py
_absorption_bridge/oqmd/cache/: sample_record.json
_absorption_bridge/selftest/: aflow_smoke.py  catalysis_hub_smoke.py  cod_smoke.py  gnome_smoke.py  materials_project_smoke.py  matlantis_smoke.py  nims_mats_smoke.py  nomad_smoke.py  omat24_smoke.py  oqmd_smoke.py  sources_audit.py  universal_ff_smoke.py
_absorption_bridge/universal_ff/: SOURCES.md  alignn_call.py  chgnet_call.py  m3gnet_call.py  mace_call.py  predictions_smoke.py  schnet_call.py
_absorption_bridge/universal_ff/cache/: sample_structure.json
_absorption_bridge/universal_ff/predictions/: hxm-aero-polyimide-001.json  hxm-algae-plastic-001.json  hxm-bat-anode-li-metal-001.json  hxm-bat-cath-drx-001.json  hxm-bat-cath-naion-001.json  hxm-cement-mgo-co2neg-001.json  hxm-co2-cap-mof-mfm-002.json  hxm-flatband-tbg-001.json  hxm-h2-elec-iro2-doped-001.json  hxm-mag-boride-001.json  hxm-mof-h2o-stable-uio66-001.json  hxm-mycel-composite-001.json  hxm-ni-4gen-re-free-001.json  hxm-pv-tandem-002.json  hxm-quantum-hbn-vb-001.json  hxm-quantum-si-donor-001.json  hxm-tdmeta-photonic-001.json  hxm-te-half-zrnisn-001.json  hxm-time-crystal-trivial-001.json  hxm-weyl-tas-001.json
_python_bridge/: README.md  pyproject.toml  universal_ff_runner.md  universal_ff_runner.py
_python_bridge/module/: ase_atoms_construct.py  ase_relaxation_check.py  carbon_form_factor_classifier.py  cross_doc_consistency_compute.py  metallurgy_alloy_composition.py  nist_anchor_resolver.py  polymer_mw_distribution.py  pymatgen_phasediagram_smoke.py  pymatgen_structure_io.py  rdkit_descriptor_calc.py  rdkit_smiles_audit.py  silicon_purity_compute.py
_research_bridge/: README.md  pyproject.toml
_research_bridge/arxiv/: SOURCES.md  arxiv_digest.py  arxiv_pull.py
_research_bridge/arxiv/arxiv_cache/: sample_response.xml  tier1_anchor_refresh_2026-05-14.jsonl
_research_bridge/selftest/: arxiv_smoke.py  sources_audit.py  web_smoke.py
_research_bridge/web/: SOURCES.md  materials_news_feed.py  patent_search.py  vendor_datasheet_pull.py
_research_bridge/web/web_cache/: sample_patent.json  sample_rss.xml  sample_vendor.html
adhesive/: adhesive.md
aerogel-foam/: aerogel-foam.md
aramid/: aramid.md
biodegradable-plastics/: biodegradable-plastics.md
carbon/: carbon.md
ceramics/: ceramics.md
cli/: hexa-matter.hexa
compound-semi/: compound-semi.md
concrete/: concrete.md
concrete_tech/: concrete-technology.md
elastomer/: elastomer.md
electrode-material/: electrode-material.md
epoxy/: epoxy.md
fabric/: hexa-fabric.md
fashion-textile/: fashion-textile.md
gemology/: gemology.md
geopolymer/: geopolymer.md
glass/: hexa-glass.md
glass-ceramic/: glass-ceramic.md
hexa-ceramic/: README.md  ceramic-architecture.md  ceramic-closure-status.md  ceramic-data-anchors.md
hexa-fashion/: README.md  fashion-architecture.md  fashion-closure-status.md  fashion-data-anchors.md
hexa-fiber/: README.md  fiber-architecture.md  fiber-closure-status.md  fiber-data-anchors.md
hexa-gem/: README.md  gem-architecture.md  gem-closure-status.md  gem-data-anchors.md
hexa-metal/: README.md  metal-architecture.md  metal-closure-status.md  metal-data-anchors.md
hexa-polymer/: README.md  polymer-architecture.md  polymer-closure-status.md  polymer-data-anchors.md
hexa-recycle/: README.md  recycle-architecture.md  recycle-closure-status.md  recycle-data-anchors.md
hexa-silicon/: README.md  silicon-architecture.md  silicon-closure-status.md  silicon-data-anchors.md
hexa-synthesis/: README.md  synthesis-architecture.md  synthesis-closure-status.md  synthesis-data-anchors.md
ionic-liquid/: ionic-liquid.md
liquid-crystal/: liquid-crystal.md
lutherie/: lutherie.md
magnetic-materials/: magnetic-materials.md
metallurgy/: swordsmithing.md
(+162 files in other folders)
